--- a/react-admin/admin/src/styles/style.css
+++ b/react-admin/admin/src/styles/style.css
@@ -7,3 +7,32 @@
 .body-container {
   max-width: 700px;
 }
+.main-wrapper {
+  overflow: hidden;
+}
+.off-menu {
+  position: fixed;
+  left: -200px;
+  top: 56px;
+  bottom: 0;
+  width: 200px;
+  color: #fff;
+  transition: 0.2s all;
+}
+
+.off-menu-sibling {
+  padding-left: 0;
+  transition: 0.2s all;
+}
+.off-menu.show {
+  left: 0;
+}
+
+.off-menu.show + .off-menu-sibling {
+  padding-left: 200px;
+}
+
+.navbar-toggler {
+  display: block !important;
+  margin-right: 20px !important;
+}
